apps/routers/kingdonb-dev/kingdonb-dev-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: kingdonb-dev
  namespace: traefik-staging
spec:
  ports:
    - name: k8s-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: kingdonb-dev
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.206
  ports:
  - port: 443
    name: k8s-https
