apps/routers/kingdonb-dev/kingdonb-dev-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kingdonb-dev
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`kb.kingdonb.dev`)
    services:
    - name: kingdonb-dev
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
